--- a/index-de.html
+++ b/index-de.html
@@ -16,17 +16,25 @@
     <style>
         body {
             background-image:
-            radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+                radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
             position: relative;
             background-size: 100% 200%;
-            background: -ms-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* IE10 */  
-            background: -moz-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* FF 3.6+ */  
-            background: -webkit-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Safari 5.1+, Chrome 10+ */  
-            background: -webkit-gradient(radial, circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Safari 4+, Chrome 2+ */  
-            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent); /* IE6 & IE7 */  
-            background: -o-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* Opera 11.10 */  
-            background: radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%); /* the standard */  
-            -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)"; /* IE8+ */  
+            background: -ms-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            /* IE10 */
+            background: -moz-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            /* FF 3.6+ */
+            background: -webkit-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            /* Safari 5.1+, Chrome 10+ */
+            background: -webkit-gradient(radial, circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            /* Safari 4+, Chrome 2+ */
+            filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent);
+            /* IE6 & IE7 */
+            background: -o-radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            /* Opera 11.10 */
+            background: radial-gradient(circle farthest-corner at 84% 12%, rgb(24 72 160) 1%, rgb(40 33 37) 19%, rgb(34 32 33) 30%, rgb(32, 32, 32) 50%);
+            /* the standard */
+            -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr=transparent)";
+            /* IE8+ */
             z-index: 1;
         }
     </style>
@@ -68,70 +76,71 @@
         <div class="main-container">
             <div class="introducing-header-dark">
                 <h1>Ich stelle<br>mich<br>kurz vor</h1>
-            </div>   
+            </div>
             <div class="main-body-dark">
-            <div class="photo-cont-dark">
-                <div class="photo-avatar-dark">
-                    <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
-                </div>
-                <div class="text-card-dark">
-                    <h2>Oleksandr</h2>
-                    <h2>Onishchenko</h2>
-                    <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
-                    <p>Auszubildender in IT-Consulting</p>
-                </div>
-            </div>
-            <div class="text-cont-dark">
-                <h1>Hallo!</h1>
-                <h3>Hier ein bisschen über mich</h3>
-                <div class="buttons-dark">
-                    <div class="cv-show-button-dark">
-                        <a href="#">Lebenslauf</a>
+                <div class="photo-cont-dark">
+                    <div class="photo-avatar-dark">
+                        <img src="static/images/Work in progress.png" alt="Photo from Oleksandr Onishchenko">
                     </div>
-                    <div class="contact-button-dark">
-                        <a href="#">Kontaktieren</a>
+                    <div class="text-card-dark">
+                        <h2>Oleksandr</h2>
+                        <h2>Onishchenko</h2>
+                        <img src="static/images/separator-bar-darkblue.png" alt="Separator bar">
+                        <p>Auszubildender in IT-Consulting</p>
                     </div>
                 </div>
-                <div class="about-me-dark">
-                    <p> Ich bin 18 Jahre alt und wohne im Großraum Hamburg. Ich absolviere eine Ausbildung als
-                        Fachinformatiker für Systemintegration. Meine Freizeit gestalte ich mit dem Lernen der
-                        Programmiersprachen und der Webentwicklung. Aber ich bin auch mal gerne weg vom Bildschirm - ich
-                        mag reisen und verschiedene Aktivitäten. Ich bin mir sicher, dass die IT-Branche perfekt für
-                        meine Karriereentwicklung passt, da es ein Zukunftsbereich ist
-                    </p>
+                <div class="text-cont-dark">
+                    <h1>Hallo!</h1>
+                    <h3>Hier ein bisschen über mich</h3>
+                    <div class="buttons-dark">
+                        <div class="cv-show-button-dark">
+                            <a href="#">Lebenslauf</a>
+                        </div>
+                        <div class="contact-button-dark">
+                            <a href="#">Kontaktieren</a>
+                        </div>
+                    </div>
+                    <div class="about-me-dark">
+                        <p> Ich bin 18 Jahre alt und wohne im Großraum Hamburg. Ich absolviere eine Ausbildung als
+                            Fachinformatiker für Systemintegration. Meine Freizeit gestalte ich mit dem Lernen der
+                            Programmiersprachen und der Webentwicklung. Aber ich bin auch mal gerne weg vom Bildschirm -
+                            ich
+                            mag reisen und verschiedene Aktivitäten. Ich bin mir sicher, dass die IT-Branche perfekt für
+                            meine Karriereentwicklung passt, da es ein Zukunftsbereich ist
+                        </p>
+                    </div>
                 </div>
-            </div>
             </div>
             <div class="skills-dark">
-            <h2>Was ich mache?</h2>
+                <h2>Was ich mache?</h2>
             </div>
             <div class="skills-container-dark">
-            <p>Zurzeit lerne ich: </p>
-            <div class="logos-container-dark">
-                <img src="static/images/js.png" alt="JavaScript">
-                <img src="static/images/java.png" alt="Java logo">
-                <img src="static/images/ms365.jpg" alt="MS 365">
-                <img src="static/images/veeam.png" alt="Veeam">
-            </div>
+                <p>Zurzeit lerne ich: </p>
+                <div class="logos-container-dark">
+                    <img src="static/images/js.png" alt="JavaScript">
+                    <img src="static/images/java.png" alt="Java logo">
+                    <img src="static/images/ms365.jpg" alt="MS 365">
+                    <img src="static/images/veeam.png" alt="Veeam">
+                </div>
                 <p>Mein Stack: </p>
-            <div class="logos-container-dark">
+                <div class="logos-container-dark">
                     <img src="static/images/html5.png" alt="HTML5 Logo">
                     <img src="static/images/css3.png" alt="CSS3 Logo">
-            </div>
-            </div>
-            <div class="coming-soon-dark">
-            <h2>Kommt bald...</h2>
-            </div>
-            <div class="coming-soon-container">
-            <p>Ich arbeite ständig an meinen Projekten und hochlade die bei GitHub</p>
-            <p>Mehr dazu</p>
-            <div class="follow-me-btn">
-                <div class="follow-me-dark">
-                    <a href="https://github.com/alxww55" target="_blank">Folgen!</a>
                 </div>
             </div>
+            <div class="coming-soon-dark">
+                <h2>Kommt bald...</h2>
             </div>
-        </div> 
+            <div class="coming-soon-container">
+                <p>Ich arbeite ständig an meinen Projekten und hochlade die bei GitHub</p>
+                <p>Mehr dazu</p>
+                <div class="follow-me-btn">
+                    <div class="follow-me-dark">
+                        <a href="https://github.com/alxww55" target="_blank">Folgen!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
         <div class="footer-dark">
@@ -156,6 +165,8 @@
                         <li><a href="index.html">EN Version</a></li>
                         <li><a href="index-ru.html">RU Version</a></li>
                         <li><a href="#">Lebenslauf</a></li>
+                        <li><a href="#">Mehr über <br>
+                                diese Web-Seite</a></li>
                     </ul>
                 </div>
             </div>
