--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 <li><a href="https://www.linkedin.com/in/oleksandr-onishchenko"
                                         target="_blank">LinkedIn</a></li>
                                 <li><a href="https://github.com/alxww55" target="_blank">GitHub|Portfolio</a></li>
-                                <li><a href="#">Contact</a></li>
+                                <li><a href="contact-page.html">Contact</a></li>
                             </div>
                         </div>
                     </ul>
@@ -89,7 +89,7 @@
                             <a href="#">Show CV</a>
                         </div>
                         <div class="contact-button-dark">
-                            <a href="#">Contact me</a>
+                            <a href="contact-page.html">Contact me</a>
                         </div>
                     </div>
                     <div class="about-me-dark">
@@ -159,6 +159,7 @@
                         <li><a href="index-de.html">DE Version</a></li>
                         <li><a href="index-ru.html">RU Version</a></li>
                         <li><a href="#">Show CV</a></li>
+                        <li><a href="#">About this project</a></li>
                     </ul>
                 </div>
             </div>
