--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="main">
-        <div class="header-control-panel bg-gray-900 h-10">
-            <p class="flex pt-2 ml-4 text-white">Test OS</p>
+        <div class="flex header-control-panel bg-gray-900 h-10 flex-row justify-between">
+            <p class="pt-2 ml-4 text-white">Test OS</p>
+            <p class="pt-2 mr-4 text-white"><span></span></p>
         </div>
         <div class="icon1-2-container block">
             <div class="icon">
@@ -37,4 +38,5 @@
         </div>
     </div>
 </body>
+<script src="src/script/main.js" type="module"></script>
 </html>
